[gd_scene load_steps=7 format=3 uid="uid://dqe8r8csc8jyw"]

[ext_resource type="Script" uid="uid://cb4665wwovl3l" path="res://src/ui/upgrade_item_entry.gd" id="1_i0hmd"]
[ext_resource type="Script" path="res://src/ui/hover_focus_button.gd" id="3_vek27"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yewdp"]
bg_color = Color(1, 1, 1, 0.1882353)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dpm6d"]
content_margin_right = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yewdp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4svth"]
bg_color = Color(1, 1, 1, 0.7058824)

[node name="UpgradeItemEntry" type="PanelContainer"]
custom_minimum_size = Vector2(400, 0)
offset_right = 400.0
offset_bottom = 118.0
focus_mode = 2
focus_behavior_recursive = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_yewdp")
script = ExtResource("1_i0hmd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="WeaponIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 8

[node name="TextContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Name" type="RichTextLabel" parent="HBoxContainer/CenterContainer/MarginContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="FlavorText" type="RichTextLabel" parent="HBoxContainer/CenterContainer/MarginContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Spacer" type="Control" parent="HBoxContainer/CenterContainer/MarginContainer/TextContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="UpgradeText" type="RichTextLabel" parent="HBoxContainer/CenterContainer/MarginContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="EntryDescription" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_dpm6d")
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
focus_behavior_recursive = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_yewdp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4svth")
script = ExtResource("3_vek27")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
